# VoiceCalendarBot

./: .gitignore  README.md  bot.py  calendarapi.py  openaiapi.py  pyproject.toml  tools.json  webapp.py
